<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:inputType="textCapSentences">

        </SearchView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="5dp"
                android:text="@string/lentos" />

            <Button
                android:id="@+id/buttonMedios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="5dp"
                android:text="@string/medios" />

            <Button
                android:id="@+id/buttonRapidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="5dp"
                android:text="@string/rapidos" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hiyam Edith Añorve Garza"
        android:layout_below="@+id/searchLayout"
        android:id="@+id/text"/>

    <ListView
        android:id="@+id/corosList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text" />
</RelativeLayout>